fixed the scrollbar maybe?

--- a/data/css/base.css
+++ b/data/css/base.css
@@ -202,7 +202,9 @@ div#overlay {
 }
 
 /*#file-system { 	width:810px; clear: both; margin: 20px 0 10px; }*/
-#file-system  .viewport { 	width:50em; height:16em; position: relative; left: 0; overflow: hidden}
+#file-system  .viewport { 		-webkit-flex: 1;
+	display: -webkit-flex;
+	-webkit-flex-direction: column; height:50%; position: relative; left: 0; overflow: hidden}
 #file-system  .overview { list-style: none; position: absolute; left: 0; top: 0; }
 #file-system  .scrollbar{ background: transparent url("http://dwtj.me/img/bg-scrollbar-track-y.png") no-repeat 0 0; position: relative; background-position: 0 0; float: right; width: 15px;}
 #file-system  .track { background: transparent url("http://dwtj.me/img/bg-scrollbar-trackend-y.png") no-repeat 0 100%; height: 100%; width:15px; position: relative; }
@@ -211,8 +213,8 @@ div#overlay {
 #file-system .disable { display: none; }
 .noSelect { user-select: none; -o-user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; }
 
-#path-bar  .viewport { width:25em; height:3em; position: relative; overflow: hidden}
-#path-bar  .overview { list-style: none; width:25em; position: absolute; left: 0; top: 0; }
+#path-bar  .viewport { width:25em; column; height:3em; position: relative; overflow: hidden}
+#path-bar  .overview { list-style: none; width:100em; position: absolute; left: 0; top: 0; }
 #path-bar  .scrollbar{ background: transparent url("http://dwtj.me/img/bg-scrollbar-track-x.png") no-repeat 0 0; position: relative; background-position: 0 0; float: right;}
 #path-bar  .track { background: transparent url("http://dwtj.me/img/bg-scrollbar-trackend-x.png")  no-repeat 100% 0; width: 100%; height:15px; position: relative; }
 #path-bar  .thumb { background: transparent url("http://dwtj.me/img/bg-scrollbar-thumb-x.png")  no-repeat 100% 50%; height: 25px; cursor: pointer; overflow: hidden; position: absolute; left: 0; top: -5px;}
